# todoist-shopping-replenisher

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  README.md  ROADMAP.md  pyproject.toml
docs/: agent_board.md  agent_workflow_process.md  domain_rules.md  operations.md  process_audit.md  review_checklist.md  technical_debt.md  threshold_notes.md
docs/artifacts/cli_behavioral_tests/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md
docs/artifacts/db_ordering/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md
docs/artifacts/docs_audit/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md
docs/artifacts/http_failure_coverage/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md
docs/artifacts/normalization_plural/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md
docs/artifacts/pipeline_dedup/: change_summary.md  contract_brief.md  review_verdict.md  risk_note.md  validation_record.md
docs/artifacts/repo_improvements_review/: contract.md  implementation_record.md  orchestrator_prompt_claude.md  orchestrator_prompt_codex.md  review_verdict.md  validation_record.md
shopping_replenisher/: __init__.py  cli.py  config.py  db.py  history.py  normalize.py  reporter.py  runner.py  scoring.py  selection.py  telegram.py  todoist_api.py
tests/: test_cli.py  test_config.py  test_db.py  test_history.py  test_normalize.py  test_reporter.py  test_runner.py  test_scoring.py  test_selection.py  test_telegram.py  test_todoist_api.py
(+13 files in other folders)
