[project]
name = "todoist-shopping-replenisher"
version = "0.1.0"
description = "Predict grocery replenishment for a Todoist shopping project."
readme = "DESIGN.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shopping_replenisher"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
